--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,7 @@ ENV/
 env/
 *.env
 
-# Jupyter Notebook checkpoints
-.ipynb_checkpoints/
+# Jupyter Notebook checkpoints.ipynb_checkpoints/
 
 # ----------------------
 # IDEs and Editors
